[package]
name = "jaro_winkler"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/joshuaclayton/jaro_winkler"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
categories = ["jaro-winkler", "string", "distance", "similarity"]
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = "0.4.0"
eddie = "0.4.2"
strsim = "0.10.0"

[[bench]]
name = "bench"
harness = false
