[package]
name = "jaro_winkler"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/joshuaclayton/jaro_winkler"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
categories = ["jaro-winkler", "string", "distance", "similarity"]
description = "Fast implementation of Jaro-Winkler for comparing two strings"
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = "0.8"
eddie = "0.4"
strsim = "0.11"

[[bench]]
name = "bench"
harness = false
